@@ -11,21 +11,28 @@ module com.example.demo1 {
     // JOptionPane (javax.swing)
     requires java.desktop;
 
-    // JasperReports (jar sin módulo → unnamed module)
-    requires jasperreports;
+    // java.naming y java.xml los usa JasperReports internamente
     requires java.naming;
     requires java.xml;
 
-    // JFreeChart (jar sin módulo → unnamed module)
+    // JasperReports y JFreeChart NO son módulos JPMS — van al classpath (unnamed module).
+    // El acceso se habilita con --add-reads en el compilador y en el runtime.
+
+    // JavaMail
+    requires java.mail;
+    requires jasperreports;
     requires jfreechart;
 
     // Abre los paquetes al módulo de FXML y de JavaFX
-    opens com.example.demo1             to javafx.fxml, javafx.graphics;
     opens com.example.demo1.Controllers to javafx.fxml;
     opens com.example.demo1.app         to javafx.fxml, javafx.graphics;
 
+    // Recursos (imágenes, FXML, estilos) — necesario para que JavaFX los lea
+    opens com.example.demo1.imagenes    to javafx.fxml, javafx.graphics;
+    opens com.example.demo1.Pantallas   to javafx.fxml, javafx.graphics;
+    opens com.example.demo1.styles      to javafx.fxml, javafx.graphics;
+
     // Exporta los paquetes principales
-    exports com.example.demo1;
     exports com.example.demo1.app;
 
     opens com.example.demo1.Utils to javafx.fxml;
